# Rushlog

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: download-ffmpeg.sh
src/: App.css  App.tsx  ipc.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ffmpeg.rs  gemini.rs  index.rs  lib.rs  main.rs  queue.rs  settings.rs  sidecar.rs
src/screens/: Done.tsx  FfmpegMissing.tsx  Picker.tsx  Queue.tsx  Settings.tsx
