[package]
name = "rushlog"
version = "0.1.0"
description = "Batch-describe video rushes into searchable markdown sidecars"
authors = ["Wanis Elabbar"]
license = "MIT"
edition = "2021"

[lib]
name = "rushlog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
toml = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }
